# 3-python-package-team_lumen

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yml
examples/: demo.py
src/morse_code/: __init__.py  __main__.py  core.py  quiz.py
src/morseify/: __init__.py  __main__.py  cli.py  core.py  explain.py  mapping.py  normalize.py  quiz.py
tests/: test_decode.py  test_encode.py  test_explain.py  test_is_valid.py  test_normalize_code.py  test_normalize_text.py  test_quiz.py
